--- a/Wpf.Tosr/MainWindow.xaml
+++ b/Wpf.Tosr/MainWindow.xaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Wpf.Tosr"
-        xmlns:userControls="clr-namespace:Wpf.BidControls.Views;assembly=Wpf.BidControls" xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+        xmlns:userControls="clr-namespace:Wpf.BidControls.Views;assembly=Wpf.BidControls" 
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
         Title="TOSR" Height="680" Width="800"
         Closed="Window_Closed"
