--- a/Wpf.Tosr/MainWindow.xaml
+++ b/Wpf.Tosr/MainWindow.xaml
@@ -3,7 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Wpf.Tosr"
         xmlns:userControls="clr-namespace:Wpf.BidControls.Views;assembly=Wpf.BidControls" 
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
@@ -71,70 +70,70 @@
 
         <Menu Grid.Row="0">
             <MenuItem Header="_File">
-                <MenuItem Name="toolStripMenuItem11" Header="Rules database" Command="{StaticResource RulesCommand}"/>
-                <MenuItem Name="toolStripMenuItemLoadSystemParameters" Header="System parameters" Click="ToolStripMenuItemLoadSystemParametersClick"/>
-                <MenuItem Name="toolStripMenuItemLoadOptimizationParameters" Header="Optimization parameters" Click="ToolStripMenuItemLoadOptimizationParametersClick"/>
-                <MenuItem Name="toolStripMenuItemUseDefaultParameters" Header="Use default parameters" Click="ToolStripMenuItemUseDefaultParametersClick"/>
+                <MenuItem Header="Rules database" Command="{StaticResource RulesCommand}"/>
+                <MenuItem Header="System parameters" Click="ToolStripMenuItemLoadSystemParametersClick"/>
+                <MenuItem Header="Optimization parameters" Click="ToolStripMenuItemLoadOptimizationParametersClick"/>
+                <MenuItem Header="Use default parameters" Click="ToolStripMenuItemUseDefaultParametersClick"/>
                 <Separator/>
-                <MenuItem Name="toolStripMenuItemLoadSet" Header="Load set from Pbn" Click="ToolStripMenuItemLoadSetClick"/>
-                <MenuItem Name="toolStripMenuItemSaveSet" Header="Save set to Pbn" Click="ToolStripMenuItemSaveSetClick"/>
-                <MenuItem Name="toolStripMenuItemSaveFilteredSet" Header="Save filtered set to Pbn" Click="ToolStripMenuItemSaveFilteredSetClick"/>
+                <MenuItem Header="Load set from Pbn" Click="ToolStripMenuItemLoadSetClick"/>
+                <MenuItem Header="Save set to Pbn" Click="ToolStripMenuItemSaveSetClick"/>
+                <MenuItem Header="Save filtered set to Pbn" Click="ToolStripMenuItemSaveFilteredSetClick"/>
             </MenuItem>
             <MenuItem Header="_View">
-                <MenuItem Name="toolStripMenuItem13" Header="View bidding" Command="{StaticResource ViewBiddingCommand}"/>
-                <MenuItem Name="toolStripMenuItemAlternateSuits" Header="Show alternate suits" Click="ToolStripMenuItemAlternateSuitsClick" IsCheckable="True"/>
+                <MenuItem Header="View bidding" Command="{StaticResource ViewBiddingCommand}"/>
+                <MenuItem Name="ToolStripMenuItemAlternateSuits" Header="Show alternate suits" Click="ToolStripMenuItemAlternateSuitsClick" IsCheckable="True"/>
             </MenuItem>
             <MenuItem Header="_Shuffle">
-                <MenuItem Name="toolStripMenuItem7" Header="Shuffle new hand" Command="{StaticResource ShuffleCommand}"/>
-                <MenuItem Name="toolStripMenuItem10" Header="Restrictions" Command="{StaticResource RestrictionsCommand}"/>
-                <MenuItem Name="toolStripMenuItemBidAgain" Header="Bid Again" Click="ToolStripMenuItemBidAgainClick"/>
+                <MenuItem Header="Shuffle new hand" Command="{StaticResource ShuffleCommand}"/>
+                <MenuItem Header="Restrictions" Command="{StaticResource RestrictionsCommand}"/>
+                <MenuItem Header="Bid Again" Click="ToolStripMenuItemBidAgainClick"/>
             </MenuItem>
             <MenuItem Header="_Batch">
-                <MenuItem Name="toolStripMenuItemGenerateHands" Header="Generate Hands" Command="{StaticResource GenerateCommand}"/>
-                <MenuItem Name="toolStripMenuItemBatchBid" Header="Batch bid generated hands" Command="{StaticResource BatchBidCommand}"/>
-                <MenuItem Name="toolStripMenuItemUseSolver" Header="Use Solver" IsCheckable="True"/>
-                <MenuItem Name="toolStripMenuItemOneBoard" Header="Batch bid one board" Click="ToolStripMenuItemOneBoardClick"/>
-                <MenuItem Name="toolStripMenuItemAbort" Header="Cancel batch bidding" Command="{StaticResource CancelBatchBiddingCommand}"/>
+                <MenuItem Header="Generate Hands" Command="{StaticResource GenerateCommand}"/>
+                <MenuItem Header="Batch bid generated hands" Command="{StaticResource BatchBidCommand}"/>
+                <MenuItem Name="ToolStripMenuItemUseSolver" Header="Use Solver" IsCheckable="True"/>
+                <MenuItem Header="Batch bid one board" Click="ToolStripMenuItemOneBoardClick"/>
+                <MenuItem Header="Cancel batch bidding" Command="{StaticResource CancelBatchBiddingCommand}"/>
             </MenuItem>
 
         </Menu>
         <ToolBar Grid.Row="1">
-            <Button x:Name="toolStripButton1" ToolTip="Shuffle" Click="ButtonShuffleClick">
+            <Button ToolTip="Shuffle" Click="ButtonShuffleClick">
                 <Image Source="/Wpf.Tosr;component/Resources/shuffle.png"/>
             </Button>
             <Separator/>
-            <Button x:Name="toolStripButton2" ToolTip="Generate hands" Click="ButtonGenerateHandsClick">
+            <Button ToolTip="Generate hands" Click="ButtonGenerateHandsClick">
                 <Image Source="/Wpf.Tosr;component/Resources/stumbleupon.png"/>
 
             </Button>
-            <Button x:Name="toolStripButton3" ToolTip="Batch" Click="ButtonBatchBiddingClick">
+            <Button ToolTip="Batch" Click="ButtonBatchBiddingClick">
                 <Image Source="/Wpf.Tosr;component/Resources/services.png"/>
 
             </Button>
-            <Button x:Name="toolStripButton4" ToolTip="Restrictions" Click="ToolStripButton4Click">
+            <Button ToolTip="Restrictions" Click="ToolStripButton4Click">
                 <Image Source="/Wpf.Tosr;component/Resources/page_restrictions.png"/>
 
             </Button>
             <Separator/>
-            <Button x:Name="toolStripButtonFirst" Click="ToolStripButtonFirstClick" ToolTip="First">
+            <Button Click="ToolStripButtonFirstClick" ToolTip="First">
                     <Image Source="/Wpf.Tosr;component/Resources/first.png"/>
             </Button>
-            <Button x:Name="toolStripButtonPrevious" Click="ToolStripButtonPreviousClick" ToolTip="Previous">
+            <Button Click="ToolStripButtonPreviousClick" ToolTip="Previous">
                 <Image Source="/Wpf.Tosr;component/Resources/previous.png"/>
             </Button>
-            <TextBox x:Name="toolStripTextBoxBoard" Text="" Width="30"/>
-            <Button x:Name="toolStripButtonNext" Click="ToolStripButtonNextClick" ToolTip="Next">
+            <TextBox x:Name="ToolStripTextBoxBoard" Text="" Width="30"/>
+            <Button Click="ToolStripButtonNextClick" ToolTip="Next">
                 <Image Source="/Wpf.Tosr;component/Resources/next.png"/>
 
             </Button>
-            <Button x:Name="toolStripButtonLast" Click="ToolStripButtonLastClick" ToolTip="Last">
+            <Button Click="ToolStripButtonLastClick" ToolTip="Last">
                 <Image Source="/Wpf.Tosr;component/Resources/last.png"/>
             </Button>
-            <ComboBox Name="toolStripComboBoxFilter" SelectionChanged="ToolStripComboBoxFilterSelectedIndexChanged" Width="100" IsReadOnly="True"/>
+            <ComboBox Name="ToolStripComboBoxFilter" SelectionChanged="ToolStripComboBoxFilterSelectedIndexChanged" Width="100" IsReadOnly="True"/>
         </ToolBar>
         <!--Cards north-->
-        <userControls:HandView  Grid.Row="2" x:Name="panelNorth" Padding="67, 27"/>
-        <!--Biddingbox and auction-->
+        <userControls:HandView  Grid.Row="2" x:Name="PanelNorth" Padding="67, 27"/>
+        <!--BiddingBox and auction-->
         <Grid Grid.Row="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
@@ -159,14 +158,14 @@
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="50"/>
             </Grid.RowDefinitions>
-            <userControls:HandView Grid.Column="0" Grid.RowSpan="2" x:Name="panelSouth" Padding="67, 27"/>
-            <Button Grid.Column="1" Grid.Row="1" Name="buttonGetAuction" Content="Get Auction" Click="ButtonGetAuctionClick" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="5"/>
+            <userControls:HandView Grid.Column="0" Grid.RowSpan="2" x:Name="PanelSouth" Padding="67, 27"/>
+            <Button Grid.Column="1" Grid.Row="1" Content="Get Auction" Click="ButtonGetAuctionClick" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="5"/>
             <Label Grid.Column="2" Grid.Row="0" VerticalAlignment="Bottom" Content="Number of hands to bid" FontWeight="Bold"/>
-            <xctk:IntegerUpDown Grid.Column="2" Grid.Row="2" Value="10" Name="numericUpDown1" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
+            <xctk:IntegerUpDown Grid.Column="2" Grid.Row="1" Value="10" Name="NumericUpDown1" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
         </Grid>
         <StatusBar Grid.Row="6" >
             <StatusBarItem>
-                <Label Name="toolStripStatusLabel1" Content="Test"/>
+                <Label Name="ToolStripStatusLabel1" Content="Test"/>
             </StatusBarItem>
         </StatusBar>
     </Grid>
