--- a/Wpf.Tosr/ShuffleRestrictionsWindow.xaml
+++ b/Wpf.Tosr/ShuffleRestrictionsWindow.xaml
@@ -12,11 +12,11 @@
             <xctk:IntegerUpDown x:Name="NumericUpDownControls" Value="2" HorizontalAlignment="Left" Margin="10" Width="100"/>
             <CheckBox Content="Shape" Name="CheckBoxShape" IsChecked="False" Margin="10"/>
             <TextBox Text="5422" Name="TextBoxShape" HorizontalAlignment="Left" Margin="10" Width="100"/>
-            <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button x:Name="OkButton" Content="OK" HorizontalAlignment="Right" VerticalAlignment="Bottom" 
-                    Margin="0, 0, 23, 12" Width="75" Height="23" IsDefault="True" Click="OkButton_Click"/>
-                <Button x:Name="CancelButton" Content="Cancel" HorizontalAlignment="Right" VerticalAlignment="Bottom" 
-                    Margin="0, 0, 12, 12" Width="75" Height="23"  IsCancel="True" Click="CancelButton_Click"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <Button Content="OK" HorizontalAlignment="Right" VerticalAlignment="Bottom" 
+                        Margin="0, 0, 23, 12" Width="75" Height="23" IsDefault="True" Click="OkButton_Click"/>
+                <Button Content="Cancel" HorizontalAlignment="Right" VerticalAlignment="Bottom" 
+                        Margin="0, 0, 12, 12" Width="75" Height="23"  IsCancel="True" Click="CancelButton_Click"/>
             </StackPanel>
 
         </StackPanel>
